--- a/css/admin.css
+++ b/css/admin.css
@@ -4,7 +4,7 @@
 .option_page_left {
 	float: left;
 	padding-right: 10px;
-	width: 788px;
+	width: 770px;
 }
 .option_page_right {
 	float: right;
@@ -54,7 +54,6 @@
   width: 100%;
 }
 .pro_feature {
-  /*float: left;*/
   overflow: hidden;
 }
 .pro_feature_ul > li {
@@ -69,10 +68,32 @@
 .mdc_logo {
   width: 200px;
 }
-.mdc_help_icon{
-	cursor: pointer;
+.mdc_help_icon {
+  color: #090;
+  cursor: pointer;
 }
 .option_page_left .yt_sm_icon {
   height: 13px;
   margin: 0 0 -2px;
+}
+.mdc_screenshot_toggle {
+  color: #999;
+  cursor: pointer;
+  text-decoration: underline;
+}
+.mdc_screenshot_img {
+  border: 1px solid #ddd;
+}
+.mdc_plugin_support > label {
+  display: inline-block;
+  padding-left: 2px;
+  vertical-align: top;
+  width: 75px;
+}
+.mdc_plugin_support_input, .mdc_plugin_support_textarea {
+  width: 190px;
+}
+.row-actions span img {
+  height: 14px;
+  margin: 0 2px -2px 0;
 }
